# OSLR

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: DEVELOPMENT.md  WORKFLOWS.md
src/osl/: __init__.py  __main__.py  apply.py  cli.py  ingest.py  lrcat.py  train.py  xmp.py
